--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -169,3 +169,9 @@
 .signup-footer-text a:hover {
   text-decoration: underline; /* Add underline on hover */
 }
+
+.error-message {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 5px;
+}
