--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -6,6 +6,7 @@
   justify-content: center; /* Center align vertically */
   height: 100vh; /* Ensure it takes full viewport height */
   margin-top: 100px;
+  background-color: #f5f5f5;
 }
 
 .dashboard-header {
